# ZeinaGuard-Pro

./: .env.example  .gitattributes  .gitignore  .replit  DEPLOYMENT_GUIDE.md  build.sh  next.config.mjs  package.json  pyproject.toml  replit.md  requirements.txt  run.sh  start_all.sh
.agents/: agent_assets_metadata.toml
.cache/nix/: binary-cache-v7.sqlite
.upm/: store.json
app/: globals.css  layout.tsx  page.tsx
app/alerts/: page.tsx
app/dashboard/: page.tsx
app/incidents/: page.tsx
app/sensors/: page.tsx
app/settings/: layout.tsx  page.tsx
app/threats/: page.tsx
app/topology/: layout.tsx  page.tsx
attached_assets/: Pasted--ZeinaGuard-sudo-bash-run-sh-ZeinaGuard-Pro-S-177644657_1776446577518.txt
backend/: __init__.py  app.py  auth.py  config.py  init_db.py  notification_routes.py  notifications_mock.py  requirements.txt  routes.py  routes_dashboard.py  routes_topology.py  topology_mock_data.py  trusted_aps.json  websocket_server.py  wips_engine.py
backend/routes/: dashboard.py
components/dashboard/: real-time-event-feed.tsx  sensor-heatmap.tsx  threat-risk-assessment.tsx  threat-score-gauge.tsx  threat-timeline-chart.tsx
components/layout/: app-layout.tsx  sidebar.tsx
components/notifications/: notification-center.tsx
components/settings/: notification-settings.tsx
hooks/: use-command-palette.ts  use-notification-demo.ts  use-socket.ts
lib/: api.ts  notification-service.ts  sound-service.ts
public/: AUDIO_README.md
sensor/: .env  config.py  local_data_logger.py  main.py  oui_db.json  requirements.txt  start.sh  utils.py
(+33 files in other folders)
