[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.7",
    "eventlet>=0.41.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-jwt-extended>=4.7.1",
    "flask-socketio>=5.6.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-engineio>=4.13.1",
    "python-socketio[client]>=5.16.1",
    "readchar>=4.2.2",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "scapy>=2.7.0",
    "sqlalchemy>=2.0.49",
    "websocket-client>=1.9.0",
]
